- 채팅봇 새 프로젝트에 맞게 수정 - 프로젝트 전환